Add new Cassandra performance settings